<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/identificador"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/etValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/valor"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/etID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/etTaxa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/taxa"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/etValor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/etFuncao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/funcao"
        app:layout_constraintTop_toBottomOf="@id/etTaxa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:textColorHint="@color/black"/>

    <CheckBox
        android:id="@+id/cbVIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vip"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etFuncao"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calcular"
        app:layout_constraintTop_toBottomOf="@id/cbVIP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
